--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -8,13 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Analyser\Analyser.csproj" />
-    <ProjectReference Include="..\jieba.NET\jieba.NET.csproj" />
-    <ProjectReference Include="..\Segmenter\Segmenter.csproj" />
+    <ProjectReference Include="..\EasyLuceneNET\EasyLuceneNET.csproj" />
   </ItemGroup>
 
 </Project>
