--- a/EasyLuceneNET/EasyLuceneNET.csproj
+++ b/EasyLuceneNET/EasyLuceneNET.csproj
@@ -1,15 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<!--<ImplicitUsings>enable</ImplicitUsings>-->
+		<Nullable>enable</Nullable>
+		<PackageId>EasyLuceneNET</PackageId>
+		<PackageVersion>1.0</PackageVersion>
+		<Description>简单的封装了jiba.net和Lucene.net进行中文检索，适用与基本的文档和网站站内检索</Description>
+		<PackageProjectUrl>https://github.com/coolqingcheng/EasyLuceneNET</PackageProjectUrl>
+		<Authors>青城</Authors>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Analyser\Analyser.csproj" />
-    <ProjectReference Include="..\jieba.NET\jieba.NET.csproj" />
-    <ProjectReference Include="..\Segmenter\Segmenter.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Analyser\Analyser.csproj" />
+		<ProjectReference Include="..\jieba.NET\jieba.NET.csproj" />
+		<ProjectReference Include="..\Segmenter\Segmenter.csproj" />
+	</ItemGroup>
 
 </Project>
